--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    "rewrites": [
+        {
+            "source": "/api/(.*)",
+            "destination": "https://YOUR_PRODUCTION_BACKEND_URL/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
